--- a/EcommAppClient/src/app/nav/nav.component.html
+++ b/EcommAppClient/src/app/nav/nav.component.html
@@ -14,7 +14,8 @@
               </ul>
           </nav>
           <a [routerLink]="['/cart']"><img src="../assets/cart.png" width="30px" height="30px" alt="cart-img" ></a>          
-          <button type="button" class="btn btn-primary" id="log-in" (click)="openModalWithComponent()">Log In</button>
+          <button type="button" *ngIf="!loggedIn()" class="btn btn-primary" id="log-in" (click)="openModalWithComponent()">Log In</button>
+          <button type="button" *ngIf="loggedIn()" class="btn btn-primary" id="log-out" (click)="loggedOut()">Log Out</button>
           <div class="menu-container">
               <div class="menu-icon-1"></div>
               <div class="menu-icon-2"></div>
