--- a/EcommAppClient/src/app/home/home.component.html
+++ b/EcommAppClient/src/app/home/home.component.html
@@ -35,7 +35,7 @@
 <div class="small-container">
     <h2 class="title">Featured Products</h2>
     <div class="row">
-        <div *ngFor="let prod of products" class="col-4">            
+        <div *ngFor="let prod of products" class="col-4" [routerLink]="['/productDetail', prod.productId]" routerLinkActive="router-link-active" >            
            <img src="../assets/product-1.jpg" alt="img-prod">
             <h4>{{prod.productName}}</h4>
             <!-- <p>{{prod.prodDescription}}</p>            -->
@@ -46,7 +46,7 @@
                 <i class="fa fa-star" aria-hidden="true"></i>
                 <i class="fa fa-star-o" aria-hidden="true"></i>               
             </div>                     
-           <p class="align-center">{{prod.productPrice | currency:'INR'}}</p>
+           <p class="align-center">{{prod.productPrice | currency: 'INR'}}</p>
         </div>
     </div>
 </div>
