--- a/EcommAppClient/src/app/app.component.css
+++ b/EcommAppClient/src/app/app.component.css
@@ -240,3 +240,26 @@ small{
 }
 
 /* <!-- Featured Categories End --> */
+
+
+/* Cart Image Start */
+
+img.cart-img{
+ /* margin-left: 500px; */
+ padding-left: 5px;
+ z-index: -1;
+}
+
+a span.item-Count{
+  outline: none;
+  text-decoration: none;
+  color: black;  
+  background: red;
+}
+
+a {
+    text-decoration: none;
+}
+
+
+/* Cart Image End */
