--- a/EcommAppClient/src/app/nav/nav.component.html
+++ b/EcommAppClient/src/app/nav/nav.component.html
@@ -13,15 +13,14 @@
                   <li><a [routerLink]="['/account']">Account</a></li>
               </ul>
           </nav>
-          <a [routerLink]="['/cart']"><img src="../assets/cart.png" width="30px" height="30px" alt="cart-img" > <span class="item-Count">{{itemCount}}</span></a>     
+          <a [routerLink]="['/cart']"><i class="fa fa-shopping-cart" aria-hidden="true"></i> <span class="item-Count">{{itemCount}}</span></a>     
           <button type="button" *ngIf="!loggedIn()" class="btn btn-primary" id="log-in" (click)="openLoginModalDialog()">Log In</button>
           <button type="button" *ngIf="loggedIn()" class="btn btn-primary" id="log-out" (click)="loggedOut()">Log Out</button>
           <div class="menu-container">
               <div class="menu-icon-1"></div>
               <div class="menu-icon-2"></div>
               <div class="menu-icon-3"></div>
-          </div>
-          
+          </div>          
           <!-- <img src="./RedStore_Img/images/menu.png" class="menu-icon" onclick="menuToggle()"> -->
       </div>
       <!-- <div class="row">
